<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.itrus.akashsappportfolio.MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="center_vertical|center_horizontal"
        android:layout_centerHorizontal="true"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:textSize="24sp" />

    <Button
        android:id="@+id/Button_1"
        style="@style/Button"
        android:text="@string/button_1"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Title" />

    <Button
        android:id="@+id/Button_2"
        style="@style/Button"
        android:text="@string/button_2"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Button_1" />

    <Button
        android:id="@+id/Button_3"
        style="@style/Button"
        android:text="@string/button_3"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Button_2"/>

    <Button
        android:id="@+id/Button_4"
        style="@style/Button"
        android:text="@string/button_4"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Button_3"/>

    <Button
        android:id="@+id/Button_5"
        style="@style/Button"
        android:text="@string/button_5"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Button_4"/>

    <Button
        android:id="@+id/Button_6"
        style="@style/Button"
        android:text="@string/button_6"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Button_5"/>

</RelativeLayout>
